--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -88,6 +88,15 @@ jobs:
                   ServerName 18.185.48.3
                   ErrorLog \${APACHE_LOG_DIR}/error.log
                   CustomLog \${APACHE_LOG_DIR}/access.log combined
+
+                  <IfModule mod_rewrite.c>
+                      RewriteEngine On
+                      RewriteBase /road_mgmt/public
+                      RewriteRule ^index\.php$ - [L]
+                      RewriteCond %{REQUEST_FILENAME} !-f
+                      RewriteCond %{REQUEST_FILENAME} !-d
+                      RewriteRule . /road_mgmt/public/index.php [L]
+                  </IfModule>
               </VirtualHost>" > /etc/apache2/sites-available/laravel.conf'
 
           # Enable site
