--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,16 +8,16 @@ on:
 
 jobs:
   laravel-tests:    
-
     runs-on: self-hosted    
-  
     steps:    
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e      
       with:        
-        php-version: '8.0'   
+        php-version: '8.1'   
     - uses: actions/checkout@v3    
     - name: Copy .env      
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"    
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Update Dependencies
+      run: composer update --no-interaction --prefer-dist --optimize-autoloader    
     - name: Install Dependencies      
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist    
     - name: Generate key      
@@ -34,8 +34,8 @@ jobs:
         DB_DATABASE: database/database.sqlite      
       run: vendor/bin/phpunit
     
-
   deploy-to-ec2:
+    needs: laravel-tests
     runs-on: self-hosted
     steps:
       - name: Deploy to EC2
