--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,36 +6,44 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  DB_CONNECTION: mysql
+  DB_HOST: ${{ secrets.DB_SECRET }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  DB_DATABASE: ${{ secrets.DB_DATABASE }}
+  DB_USERNAME: ${{ secrets.DB_USERNAME }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
 jobs:
-  laravel-tests:    
-    runs-on: self-hosted    
-    steps:    
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e      
-      with:        
-        php-version: '8.1'   
-    - uses: actions/checkout@v3    
-    - name: Copy .env      
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Update Dependencies
-      run: composer update --no-interaction --prefer-dist --optimize-autoloader
-    - name: Install Dependencies      
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist    
-    - name: Generate key      
-      run: php artisan key:generate    
-    - name: Directory Permissions      
-      run: chmod -R 777 storage bootstrap/cache    
-    - name: Create Database      
-      run: |
-        mkdir -p database        
-        touch database/database.sqlite    
-    - name: Execute tests (Unit and Feature tests) via PHPUnit      
-      env:        
-        DB_CONNECTION: sqlite        
-        DB_DATABASE: database/database.sqlite      
-      run: vendor/bin/phpunit
-    
+  setup-env:
+    runs-on: self-hosted
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+          extensions: mbstring, pdo_mysql # Specify your required extensions here
+
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+      - name: Generate key
+        run: php artisan key:generate
+
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        run: vendor/bin/phpunit
+
   deploy-to-ec2:
-    needs: laravel-tests
+    needs: [setup-env]
     runs-on: self-hosted
     steps:
       - name: Deploy to EC2
@@ -44,7 +52,42 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-      - name: Install Apache
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y apache2
+          script: |
+            sudo apt-get install apache2 -y
+            sudo add-apt-repository -y ppa:ondrej/php
+            sudo apt-get update
+            sudo apt-get install libapache2-mod-php php php-common php-xml php-mysql php-gd php-opcache php-mbstring php-tokenizer php-json php-bcmath php-zip unzip -y
+            sudo systemctl restart apache2
+            curl -sS https://getcomposer.org/installer | php 
+            sudo mv composer.phar /usr/local/bin/composer
+
+            sudo sh -c 'echo "<VirtualHost *:80>
+                ServerAdmin admin@example.com
+                ServerName mydomain.com
+                DocumentRoot /var/www/html/road_mgmt/public
+
+                <Directory /var/www/html/road_mgmt>
+                Options Indexes MultiViews
+                AllowOverride None
+                Require all granted
+                </Directory>
+
+                ErrorLog ${APACHE_LOG_DIR}/error.log
+                CustomLog ${APACHE_LOG_DIR}/access.log combined
+            </VirtualHost>" > /etc/apache2/sites-available/road_mgmt.conf'
+
+            sudo a2enmod rewrite
+            sudo a2ensite road_mgmt.conf
+            sudo systemctl restart apache2
+
+            git clone git@github.com:Elsilaves/road_mgmt.git /var/www/html/road_mgmt
+            cd /var/www/html/road_mgmt
+            composer install --no-dev
+
+            sudo chown -R www-data:www-data /var/www/html/road_mgmt
+            sudo chmod -R 775 /var/www/html/road_mgmt
+            sudo chmod -R 775 /var/www/html/road_mgmt/storage
+            sudo chmod -R 775 /var/www/html/road_mgmt/bootstrap/cache
+
+            cp .env.example .env
+            php artisan key:generate
