--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'Elsilaves/road_mgmt'
+          token: ${{ secrets.TOKEN }}
           ssh-key: ${{ secrets.SSH_KEY }}
 
       - name: Setup PHP
