--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,6 +12,10 @@ jobs:
   build:
     runs-on: self-hosted
 
+    env:
+      http_proxy: http://proxy.example.com:8080
+      https_proxy: http://proxy.example.com:8080
+
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
