--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout Repository
       uses: webfactory/ssh-agent@v0.5.3
       with:
-        ssh-private-key: ${{ secrets.SSH_KEY }}
+        ssh-private-key: ${{ secrets.DEPLOY_KEY }}
         
     - name: Clone Repository
       run: git clone git@github.com:Elsilaves/road_mgmt.git
@@ -37,3 +37,10 @@ jobs:
 
     - name: Run PHPUnit Tests
       run: vendor/bin/phpunit
+
+    - name: Deploy to EC2
+      run: |
+        echo "${{ secrets.SSH_KEY }}" > private_key.pem
+        chmod 600 private_key.pem
+        rsync -av -e "ssh -o StrictHostKeyChecking=no -i private_key.pem" --exclude '.git' . ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html
+        rm private_key.pem
