--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,11 +13,14 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout Repository
+    - name: Setup SSH agent
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.SSH_KEY }}
         
+    - name: Remove existing road_mgmt directory
+      run: rm -rf road_mgmt
+
     - name: Clone Repository
       run: git clone git@github.com:Elsilaves/road_mgmt.git
 
@@ -38,16 +41,10 @@ jobs:
     - name: Run PHPUnit Tests
       run: vendor/bin/phpunit
 
-    - name: Remove existing files in target directory
-      run: |
-        echo "${{ secrets.SSH_KEY }}" > private_key.pem
-        chmod 600 private_key.pem
-        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "rm -rf /var/www/html/*"
-        rm private_key.pem
-
     - name: Deploy to EC2
       run: |
         echo "${{ secrets.SSH_KEY }}" > private_key.pem
         chmod 600 private_key.pem
-        rsync -av -e "ssh -o StrictHostKeyChecking=no -i private_key.pem" --exclude '.git' . ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "rm -rf /var/www/html/road_mgmt/*"
+        rsync -av -e "ssh -o StrictHostKeyChecking=no -i private_key.pem" --exclude '.git' . ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/road_mgmt
         rm private_key.pem
