--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -45,6 +45,6 @@ jobs:
       run: |
         echo "${{ secrets.Pem_Key }}" > private_key.pem
         chmod 600 private_key.pem
-        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "rm -rf /var/www/html/road_mgmt/*"
-        rsync -av -e "ssh -o StrictHostKeyChecking=no -i private_key.pem" --exclude '.git' . ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/road_mgmt
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "rm -rf /var/www/html/*"
+        rsync -av -e "ssh -o StrictHostKeyChecking=no -i private_key.pem" --exclude '.git' . ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html
         rm private_key.pem
