--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -47,5 +47,25 @@ jobs:
         chmod 600 private_key.pem
         ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "sudo rm -rf /var/www/html/*"
         rsync -av -e "ssh -o StrictHostKeyChecking=no -i private_key.pem" --exclude '.git' . ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/road_mgmt --rsync-path="sudo rsync"
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "sudo chown -R www-data:www-data /var/www/html/road_mgmt && sudo chmod -R 755 /var/www/html/road_mgmt/storage /var/www/html/road_mgmt/bootstrap"
         rm private_key.pem
-    
+
+    - name: Update Apache Config
+      run: |
+        echo "${{ secrets.Pem_Key }}" > private_key.pem
+        chmod 600 private_key.pem
+        echo "<VirtualHost *:80>
+        ServerName ${SERVER_IP}
+        ServerAdmin webmaster@localhost
+        DocumentRoot /var/www/html/road_mgmt/public
+        <Directory /var/www/html/road_mgmt/public>
+            AllowOverride All
+            Order allow,deny
+            allow from all
+        </Directory>
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
+        </VirtualHost>" > road_mgmt.conf
+        scp -i private_key.pem road_mgmt.conf ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/etc/apache2/sites-available/
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "sudo a2ensite road_mgmt && sudo systemctl restart apache2"
+        rm private_key.pem road_mgmt.conf
