--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -48,13 +48,17 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "sudo rm -rf /var/www/html/road_mgmt"
         rsync -av -e "ssh -o StrictHostKeyChecking=no -i private_key.pem" --exclude '.git' road_mgmt/ ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/road_mgmt --rsync-path="sudo rsync"
         scp -o StrictHostKeyChecking=no -i private_key.pem .env ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/road_mgmt/.env
-        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "cd /var/www/html/road_mgmt && composer install --no-dev && sudo php artisan key:generate"
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "\
+            sed -i 's/DB_HOST_PLACEHOLDER/${{ secrets.DB_ENDPOINT }}/g' /var/www/html/road_mgmt/.env && \
+            sed -i 's/DB_PORT_PLACEHOLDER/${{ secrets.DB_PORT }}/g' /var/www/html/road_mgmt/.env && \
+            sed -i 's/DB_USERNAME_PLACEHOLDER/${{ secrets.DB_USERNAME }}/g' /var/www/html/road_mgmt/.env && \
+            sed -i 's/DB_PASSWORD_PLACEHOLDER/${{ secrets.DB_PASSWORD }}/g' /var/www/html/road_mgmt/.env && \
+            cd /var/www/html/road_mgmt && \
+            composer install --no-dev && \
+            php artisan key:generate"
         ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "sudo chown -R www-data:www-data /var/www/html/road_mgmt && sudo chmod -R 755 /var/www/html/road_mgmt/storage /var/www/html/road_mgmt/bootstrap"
         rm private_key.pem
     
-  
-
-
    # - name: Update Apache Config
    #   run: |
    #     echo "${{ secrets.Pem_Key }}" > private_key.pem
