--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -58,6 +58,8 @@ jobs:
             php artisan key:generate"
         ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }} "sudo chown -R www-data:www-data /var/www/html/road_mgmt && sudo chmod -R 755 /var/www/html/road_mgmt/storage /var/www/html/road_mgmt/bootstrap"
         rm private_key.pem
+
+  # Add the sql config 
     
    # - name: Update Apache Config
    #   run: |
